<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_menu"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <!--  <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:layout_weight="3"
        android:text="@string/bt_undo" />-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/bt_foot"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight="5"
        android:background="@drawable/btn_rettangolare"
        android:padding="10dp"
        android:text="@string/bt_foot"
        android:textColor="@color/scritte_bottoni" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/bt_setting"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="5"
        android:background="@drawable/btn_rettangolare"
        android:padding="5dp"
        android:text="@string/lb_setting"
        android:textColor="@color/scritte_bottoni" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/bt_password"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="5"
        android:background="@drawable/btn_rettangolare"
        android:padding="10dp"
        android:text="@string/bt_password"
        android:textColor="@color/scritte_bottoni" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    
    <Button
        android:id="@+id/bt_lingua"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="5"
        android:background="@drawable/btn_rettangolare"
        android:padding="10dp"
        android:text="@string/bt_lingua"
        android:textColor="@color/scritte_bottoni" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <Button
        android:id="@+id/bt_sign_out"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_weight="5"
        android:background="@drawable/btn_rettangolare"
        android:padding="10dp"
        android:text="@string/bt_sign_out"
        android:textColor="@color/scritte_bottoni" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>
