<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:minWidth="300dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/d_password_reset_forgot_your_password"
        android:id="@+id/textView"
        android:textColor="#ffb8b8b8"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#20ffffff"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_marginBottom="20dp"
        android:hint="@string/d_password_reset_email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#20ffffff"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:weightSum="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/d_password_reset_back"
            android:id="@+id/buttonBack"
            android:textColor="#ffaeaeae"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical|left" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/d_password_reset_reset"
                android:id="@+id/buttonReset"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:layout_weight="0.5"
                android:layout_gravity="right"
                android:paddingLeft="20dp"
                android:background="@drawable/btn_primary"
                android:textStyle="bold"
                android:paddingRight="20dp"
                android:textColor="#ffffffff" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>